syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.example.ddossimulation";

service DefenseService {
  rpc HandleAttack (AttackRequest) returns (AttackResponse) {}
  rpc StopAttack (StopRequest) returns (StopResponse) {}
}

service AttackService {
  rpc StartAttack (StartRequest) returns (StartResponse) {}
}

message AttackRequest {
  int32 id = 1;
  string type = 2;
}

message AttackResponse {
  bool success = 1;
  string message = 2;
}

message StopRequest {
  string reason = 1;
}

message StopResponse {
  bool stopped = 1;
}

message StartRequest {
  int32 rps = 1;
}

message StartResponse {
  bool started = 1;
}